# Ren-v.01

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
CMake/: CompilerInfo.cmake
CMake/modules/: FindCNPY.cmake  FindEigen3.cmake  FindEmbree.cmake  FindGLAD.cmake  FindGLFW.cmake  FindGLOG.cmake  FindNanoGUI.cmake  FindOpenEXR.cmake  FindOptionsParser.cmake  FindSTB.cmake  FindTBB.cmake  FindTinyFormat.cmake  FindTinyOBJ.cmake  Findrapidjson.cmake
data/: test.json
external_libraries/: CMakeLists.txt
include/Bass/: camera.h  circle.h  core.h  diffuse.h  film.h  hdrfilm.h  hit.h  integrator.h  jsonparse.h  ldrfilm.h  lights.h  material.h  pinhole_camera.h  point.h  render.h  screen.h  shape.h  triangle.h
src/Camera/: CMakeLists.txt  pinhole_camera.cpp
src/Core/: CMakeLists.txt  core.cpp
src/Film/: CMakeLists.txt  hdrfilm.cpp  ldrfilm.cpp
src/Integrator/: CMakeLists.txt  hit.cpp  integrator.cpp
src/JsonParser/: CMakeLists.txt  jsonparse.cpp
src/Light/: CMakeLists.txt  lights.cpp  point.cpp
src/Material/: CMakeLists.txt  diffuse.cpp  material.cpp
src/Objects/: CMakeLists.txt  circle.cpp  shape.cpp  triangle.cpp
src/Renderer/: CMakeLists.txt  render.cpp
src/Screen/: CMakeLists.txt  screen.cpp
src/World/: CMakeLists.txt
