include_directories(
   ${BASS_INCLUDE_DIR}
   ${REN_INCLUDE_DIR}
   ${EIGEN3_INCLUDE_DIR}
   ${OPENEXR_INCLUDE_DIR}
   ${ILMBASE_INCLUDE_DIR}
   ${ZLIB_INCLUDE_DIRS})

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)


set(CORE_SRCS
	${BASS_INCLUDE_DIR}/Bass/core.h core.cpp)
	
SET(LIB_TYPE STATIC)

add_library(Core ${LIB_TYPE} ${CORE_SRCS})